--- a/Movie Recommendation Engine .ipynb
+++ b/Movie Recommendation Engine .ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# prep and read data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
    "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
     "\n",
     "import os\n",
     "\n",
@@ -42,16 +35,24 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import random"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "code_folding": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "for dirname, _, filenames in os.walk('/Users/luwu/Downloads/archive'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "/Users/luwu/Downloads/archive/movie_titles.csv\n",
       "/Users/luwu/Downloads/archive/qualifying.txt\n",
@@ -64,46 +65,61 @@
      ]
     }
    ],
-   "source": [
-    "for dirname, _, filenames in os.walk('/Users/luwu/Downloads/archive'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "title=pd.read_csv('/Users/luwu/Downloads/archive/movie_titles.csv',encoding='latin1')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "title=title[['year', 'title']]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "title=title.reset_index()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "source": [
+    "title"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "       index    year                                              title\n",
+       "0          0  2003.0                                    Dinosaur Planet\n",
+       "1          1  2004.0                         Isle of Man TT 2004 Review\n",
+       "2          2  1997.0                                          Character\n",
+       "3          3  1994.0                       Paula Abdul's Get Up & Dance\n",
+       "4          4  2004.0                           The Rise and Fall of ECW\n",
+       "...      ...     ...                                                ...\n",
+       "17765  17765  2002.0  Where the Wild Things Are and Other Maurice Se...\n",
+       "17766  17766  2004.0                  Fidel Castro: American Experience\n",
+       "17767  17767  2000.0                                              Epoch\n",
+       "17768  17768  2003.0                                        The Company\n",
+       "17769  17769  2003.0                                       Alien Hunter\n",
+       "\n",
+       "[17770 rows x 3 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -199,38 +215,17 @@
        "</table>\n",
        "<p>17770 rows × 3 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "       index    year                                              title\n",
-       "0          0  2003.0                                    Dinosaur Planet\n",
-       "1          1  2004.0                         Isle of Man TT 2004 Review\n",
-       "2          2  1997.0                                          Character\n",
-       "3          3  1994.0                       Paula Abdul's Get Up & Dance\n",
-       "4          4  2004.0                           The Rise and Fall of ECW\n",
-       "...      ...     ...                                                ...\n",
-       "17765  17765  2002.0  Where the Wild Things Are and Other Maurice Se...\n",
-       "17766  17766  2004.0                  Fidel Castro: American Experience\n",
-       "17767  17767  2000.0                                              Epoch\n",
-       "17768  17768  2003.0                                        The Company\n",
-       "17769  17769  2003.0                                       Alien Hunter\n",
-       "\n",
-       "[17770 rows x 3 columns]"
       ]
      },
-     "execution_count": 74,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 74
     }
    ],
-   "source": [
-    "title"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if not os.path.isfile('data.csv'):\n",
     "    # Create a file 'data.csv' before reading it\n",
@@ -256,22 +251,13 @@
     "                    data.write('\\n')\n",
     "        print(\"Done.\\n\")\n",
     "    data.close()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sorting the dataframe by date..\n",
-      "Done..\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
     "df = pd.read_csv('data.csv', sep=',', \n",
@@ -283,15 +269,58 @@
     "print('Sorting the dataframe by date..')\n",
     "df.sort_values(by='date', inplace=True)\n",
     "print('Done..')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Sorting the dataframe by date..\n",
+      "Done..\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "source": [
+    "df"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "           movie    user  rating       date  movie_id  \\\n",
+       "0           1969  204439       3 1999-12-10    1969.0   \n",
+       "1           1969  204439       3 1999-12-10    1969.0   \n",
+       "2           1969  204439       3 1999-12-10    1969.0   \n",
+       "3           1969  204439       3 1999-12-10    1969.0   \n",
+       "4           1969  204439       3 1999-12-10    1969.0   \n",
+       "...          ...     ...     ...        ...       ...   \n",
+       "124074097   1979  660764       3 2005-12-31    1979.0   \n",
+       "124074098   1979  660764       3 2005-12-31    1979.0   \n",
+       "124074099   1979  660764       3 2005-12-31    1979.0   \n",
+       "124074100   1979  660764       3 2005-12-31    1979.0   \n",
+       "124074101   1979  660764       3 2005-12-31    1979.0   \n",
+       "\n",
+       "                                                       title  \n",
+       "0                                              The Libertine  \n",
+       "1                              Guns of the Magnificent Seven  \n",
+       "2                              The Prime of Miss Jean Brodie  \n",
+       "3                                    My Side of the Mountain  \n",
+       "4          Benny Hill: Complete and Unadulterated: The Na...  \n",
+       "...                                                      ...  \n",
+       "124074097                                            Macbeth  \n",
+       "124074098                                       Don Giovanni  \n",
+       "124074099                                     Going in Style  \n",
+       "124074100                                      The Europeans  \n",
+       "124074101                                           Prophecy  \n",
+       "\n",
+       "[124074102 rows x 6 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -423,51 +452,17 @@
        "</table>\n",
        "<p>124074102 rows × 6 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "           movie    user  rating       date  movie_id  \\\n",
-       "0           1969  204439       3 1999-12-10    1969.0   \n",
-       "1           1969  204439       3 1999-12-10    1969.0   \n",
-       "2           1969  204439       3 1999-12-10    1969.0   \n",
-       "3           1969  204439       3 1999-12-10    1969.0   \n",
-       "4           1969  204439       3 1999-12-10    1969.0   \n",
-       "...          ...     ...     ...        ...       ...   \n",
-       "124074097   1979  660764       3 2005-12-31    1979.0   \n",
-       "124074098   1979  660764       3 2005-12-31    1979.0   \n",
-       "124074099   1979  660764       3 2005-12-31    1979.0   \n",
-       "124074100   1979  660764       3 2005-12-31    1979.0   \n",
-       "124074101   1979  660764       3 2005-12-31    1979.0   \n",
-       "\n",
-       "                                                       title  \n",
-       "0                                              The Libertine  \n",
-       "1                              Guns of the Magnificent Seven  \n",
-       "2                              The Prime of Miss Jean Brodie  \n",
-       "3                                    My Side of the Mountain  \n",
-       "4          Benny Hill: Complete and Unadulterated: The Na...  \n",
-       "...                                                      ...  \n",
-       "124074097                                            Macbeth  \n",
-       "124074098                                       Don Giovanni  \n",
-       "124074099                                     Going in Style  \n",
-       "124074100                                      The Europeans  \n",
-       "124074101                                           Prophecy  \n",
-       "\n",
-       "[124074102 rows x 6 columns]"
       ]
      },
-     "execution_count": 46,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 46
     }
    ],
-   "source": [
-    "df"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def missing_df(df):\n",
     "    missing_df=pd.DataFrame(df.apply(lambda x:sum(x.isnull())/len(df)))\n",
@@ -480,84 +475,89 @@
     "def drop_dup(df):\n",
     "    df=df.drop_duplicates()\n",
     "    return df"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df=drop_dup(df) #remove duplicates"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#join df and title to get movie titles \n",
     "\n",
     "df=pd.merge(df, title, left_on='movie', right_on='index')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "source": [
+    "sum(df['title'].isna())"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 77,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 77
     }
    ],
-   "source": [
-    "sum(df['title'].isna())"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "source": [
+    "print(f\"number of unique movies: {df['movie'].nunique()}\")\n",
+    "print(f\"number of unique users:{df['user'].nunique()}\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "number of unique movies: 4499\n",
       "number of unique users:470758\n"
      ]
     }
    ],
-   "source": [
-    "print(f\"number of unique movies: {df['movie'].nunique()}\")\n",
-    "print(f\"number of unique users:{df['user'].nunique()}\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#how many movies each user rated?\n",
     "\n",
     "user_movies=df.groupby('user').count()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "source": [
+    "user_movies['movie'].describe() # on average users rate 51 movies "
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "count    470758.000000\n",
@@ -571,31 +571,31 @@
        "Name: movie, dtype: float64"
       ]
      },
-     "execution_count": 80,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 80
     }
    ],
-   "source": [
-    "user_movies['movie'].describe() # on average users rate 51 movies "
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#for each movie, how many reviews?\n",
     "movies_reviews=df.groupby('movie')['user'].count()\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "source": [
+    "movies_reviews.describe() # on average, movies gaterh 4450 reviews"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "count      4499.000000\n",
@@ -609,43 +609,38 @@
        "Name: user, dtype: float64"
       ]
      },
-     "execution_count": 82,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 82
     }
    ],
-   "source": [
-    "movies_reviews.describe() # on average, movies gaterh 4450 reviews"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# transform data to matrix"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## user-movie matrix where each row is a user and each feature is a movie"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from scipy.sparse import csr_matrix"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def create_matrix(df):\n",
     "    N=df['user'].nunique()\n",
@@ -662,81 +657,81 @@
     "    X = csr_matrix((df[\"rating\"], (movie_index, user_index)), shape=(M, N))\n",
     "    \n",
     "    return X, user_mapper, movie_mapper, user_inv_mapper, movie_inv_mapper"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "source": [
+    "np.unique(df[\"user\"])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([      6,       7,      10, ..., 2649409, 2649426, 2649429])"
       ]
      },
-     "execution_count": 41,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 41
     }
    ],
-   "source": [
-    "np.unique(df[\"user\"])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "X, user_mapper, movie_mapper, user_inv_mapper, movie_inv_mapper = create_matrix(df)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix sparsity: 1.14%\n"
-     ]
-    }
-   ],
    "source": [
     "#check sparsity of the matrix \n",
     "\n",
     "sparsity = X.count_nonzero()/(X.shape[0]*X.shape[1])\n",
     "\n",
     "print(f\"Matrix sparsity: {round(sparsity*100,2)}%\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Matrix sparsity: 1.14%\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "only 1.14% of  cells were populated, but it's more than 0.05% recommended bottomline. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from scipy.sparse import save_npz\n",
     "\n",
     "save_npz('user_movie_matrix.npz', X)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Use KNN to identify similar movies\n",
     "\n",
@@ -770,16 +765,30 @@
     "        neighbour_ids.append(movie_inv_mapper[n])\n",
     "    neighbour_ids.pop(0)\n",
     "    return neighbour_ids"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "source": [
+    "\n",
+    "movie_titles = dict(zip(df['movie'],df['title']))\n",
+    "\n",
+    "movie_id = 1979\n",
+    "\n",
+    "similar_ids = find_similar_movies(movie_id, X, k=10)\n",
+    "movie_title = movie_titles[movie_id]\n",
+    "\n",
+    "print(f\"Because you watched {movie_title}\")\n",
+    "for i in similar_ids:\n",
+    "    print(movie_titles[i])\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Because you watched Alien: Resurrection: Collector's Edition: Bonus Material\n",
       "The Great Locomotive Chase\n",
@@ -795,26 +804,14 @@
      ]
     }
    ],
-   "source": [
-    "\n",
-    "movie_titles = dict(zip(df['movie'],df['title']))\n",
-    "\n",
-    "movie_id = 1979\n",
-    "\n",
-    "similar_ids = find_similar_movies(movie_id, X, k=10)\n",
-    "movie_title = movie_titles[movie_id]\n",
-    "\n",
-    "print(f\"Because you watched {movie_title}\")\n",
-    "for i in similar_ids:\n",
-    "    print(movie_titles[i])\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
