--- a/Movie Recommendation Engine .ipynb
+++ b/Movie Recommendation Engine .ipynb
@@ -8,6 +8,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Credit : https://github.com/topspinj/recommender-tutorial/blob/master/part-1-item-item-recommender.ipynb\n"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
